--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "keywords": [
         "excerpt",
         "markdown",
+        "more",
         "preview",
         "remark",
-        "remark-plugin"
+        "remark-plugin",
+        "teaser"
     ],
     "engines": {
         "node": ">=8.6.0",
